--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.zmtmt.zhibohao"
         minSdkVersion 16
         targetSdkVersion 19
-        versionCode 12
-        versionName "2.2"
+        versionCode 13
+        versionName "2.3"
         multiDexEnabled true
     }
     signingConfigs {
@@ -60,5 +60,6 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
+    compile 'com.android.support:design:23.2.0'
     testCompile 'junit:junit:4.12'
 }
