--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
         applicationId "com.zmtmt.zhibohao"
         minSdkVersion 16
         targetSdkVersion 19
-        versionCode 13
+        versionCode 14
         versionName "2.3"
         multiDexEnabled true
     }
@@ -54,6 +54,7 @@ dependencies {
     compile files('libs/alivc-live-record-v1.2.0.jar')
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:cardview-v7:23.2.1'
+
     compile 'com.orhanobut:logger:1.15'
     compile 'com.google.zxing:core:3.2.0'
     compile 'com.android.support:multidex:1.0.1'
@@ -61,5 +62,7 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
     compile 'com.android.support:design:23.2.0'
+    //Bugly
+    compile 'com.tencent.bugly:crashreport:latest.release'
     testCompile 'junit:junit:4.12'
 }
