--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,21 +33,21 @@
 
 
     <application
-        android:name=".MyApplication"
+        android:name=".app.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".IndexActivity"
+            android:name=".activity.IndexActivity"
             android:screenOrientation="portrait"/>
         <activity
             android:name=".wxapi.WXEntryActivity"
             android:exported="true"
             android:label="@string/app_name"/>
         <activity
-            android:name=".GuideActivity"
+            android:name=".activity.GuideActivity"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
             <intent-filter>
@@ -57,24 +57,24 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".WebActivity"
+            android:name=".activity.WebActivity"
             android:screenOrientation="portrait">
         </activity>
         <activity
-            android:name=".endActivity"
+            android:name=".activity.EndActivity"
             android:screenOrientation="portrait">
         </activity>
 
         <!-- alibaba -->
         <activity
-            android:name=".LiveCameraActivity"
+            android:name=".activity.LiveCameraActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:launchMode="singleTop"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen"/>
         <activity
-            android:name=".PushParamsActivity"
+            android:name=".activity.PushParamsActivity"
             android:screenOrientation="portrait"/>
-        <activity android:name=".ProtocolActivity">
+        <activity android:name=".activity.ProtocolActivity">
         </activity>
 
         <provider
@@ -87,7 +87,7 @@
                 android:resource="@xml/file_paths"/>
         </provider>
 
-        <activity android:name=".SpeedTestActivity"
+        <activity android:name=".activity.SpeedTestActivity"
             android:screenOrientation="landscape"
             >
         </activity>
