--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,5 +63,18 @@ dependencies {
     compile 'com.android.support:design:23.2.1'
     //Bugly
     compile 'com.tencent.bugly:crashreport:latest.release'
+    //rx
+    compile 'io.reactivex.rxjava2:rxjava:2.0.1'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    //retrofit
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    //Gson converter
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    //RxJava2 Adapter
+    compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+    //okhttp
+    compile 'com.squareup.okhttp3:okhttp:3.4.1'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
+
     testCompile 'junit:junit:4.12'
 }
